--- a/src/components/share/share.css
+++ b/src/components/share/share.css
@@ -1,6 +1,6 @@
 .share {
   width: 100%;
-  height: 170px;
+  height: auto;
   border-radius: 10px;
   -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
   box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
@@ -40,6 +40,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-direction: column;
 }
 
 .shareOptions{
@@ -73,4 +74,10 @@
     margin-right: 20px;
     cursor: pointer;
     color: white;
+}
+
+.shareTags{
+  display: flex;
+  margin-left: 20px;
+  flex-direction: column;
 }
